--- a/css/styles.css
+++ b/css/styles.css
@@ -11495,7 +11495,7 @@ html {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #2c3e50;
+  background-color: #333;
   color: #fff;
 }
 
